Update  Font & Added Texts

--- a/index.html
+++ b/index.html
@@ -50,21 +50,21 @@
                                 
                             </div>
                             <div class="expense-calculation-button pt-5 text-center">
-                                <a id="expense-button" class="expense-button">Calculate</a>
+                                <a href="#" id="expense-button" class="expense-button">Calculate</a>
                             </div>
                             <div class="total-expense-detail text-center mt-5">
-                                <p class="tota-expense">Total Expenses: 5500 </p>
+                                <p class="total-expense">Total Expenses: 5500 </p>
                                 <p class="total-balance">Balance: 4500</p>
                             </div>
                             <div class="saving-section mt-5">
                                 <span>Save: </span>
                                 <input class="input-field-saving" type="text">
                                 <span class="mx-2">%</span>
-                                <a id="expense-button" class="saving-button">Save</a>
+                                <a href="#" id="saving-button" class="saving-button">Save</a>
                             </div>
                             <div class="saving-amount text-center mt-5">
                                 <p class="saving-amount">Saving Amount: 2000</p>
-                                <p>Remaining Balance: 2500</p>
+                                <p class="remaining-amount">Remaining Balance: 2500</p>
                             </div>
                         </div>
                     </div>
