--- a/index.html
+++ b/index.html
@@ -22,30 +22,38 @@
                 <div class="calculation-section-right col-md-12 col-lg-6 col-sm-12 p-5">
                     <div class="all-details d-flex justify-content-center">
                         <div class="all-balance">
+                            <!-- <div id="invalid-message" class="alert alert-warning alert-dismissible fade show" role="alert">
+                                Holy guacamole! You should check in on some of those fields below.
+                                <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+                            </div> -->
                             <div class="income-details pt-4">
                                 <div class="income-heading">
                                     <h3 class="text-center">Income</h3>                           
                                 </div>
-                                <div class="income-input mt-3">
+                                <div class="income-total mt-3">
                                     <span>Income: </span>
-                                    <input class="input-field" type="text">
+                                    <input id="income-input" class="input-field" type="text">
+                                    <small id="income-input-message" class="invalid-message"></small>
                                 </div>
                             </div>
                             <div class="expense-details pt-4">
                                 <div class="expense-heading">
-                                    <h3 class="text-center">Income</h3>                           
+                                    <h3 class="text-center">Expense</h3>                           
                                 </div>
                                 <div class="expense-input mt-3 text-end">
                                     <span>Food: </span>
-                                    <input class="input-field" type="text">
+                                    <input id="food-input" class="input-field" type="text">
+                                    <small id="food-input-message" class="invalid-message"></small>
                                 </div>
                                 <div class="expense-input mt-3 text-end">
                                     <span>Rent: </span>
-                                    <input class="input-field" type="text">
+                                    <input id="rent-input" class="input-field" type="text">
+                                    <small id="rent-input-message" class="invalid-message"></small>
                                 </div>
                                 <div class="expense-input mt-3 text-end">
                                     <span>Clothes: </span>
-                                    <input class="input-field" type="text">
+                                    <input id="clothes-input" class="input-field" type="text">
+                                    <small id="clothes-input-message" class="invalid-message"></small>
                                 </div> 
                                 
                             </div>
@@ -53,8 +61,9 @@
                                 <a href="#" id="expense-button" class="expense-button">Calculate</a>
                             </div>
                             <div class="total-expense-detail text-center mt-5">
-                                <p class="total-expense">Total Expenses: 5500 </p>
-                                <p class="total-balance">Balance: 4500</p>
+                                <p id="total-expense" class="total-expense"></p>
+                                <p id="total-balance" class="total-balance"></p>
+                                <small id="balance-message" class="balance-message"></small>
                             </div>
                             <div class="saving-section mt-5">
                                 <span>Save: </span>
@@ -74,5 +83,6 @@
     </section>
     
     <script src="./assets/js/main.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
 </body>
 </html>
