Update Float Number

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
                             </div>
                             
                             <div class="expense-calculation-button pt-5 text-center">
-                                <a href="#" id="expense-button" class="expense-button">Calculate</a>
+                                <a id="expense-button" class="expense-button">Calculate</a>
                             </div>
                             <div class="total-expense-detail text-center mt-5">
                                 <p id="total-expense" class="total-expense"></p>
@@ -72,7 +72,7 @@
                                 <span>Save: </span>
                                 <input id="saving-input" class="input-field-saving" type="text">
                                 <span class="mx-2">%</span>
-                                <a href="#" id="saving-button" class="saving-button">Save</a>
+                                <a id="saving-button" class="saving-button">Save</a>
                                 <small id="saving-input-message" class="invalid-message"></small>
                             </div>
                             <div class="saving-amount text-center mt-5">
